--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "Test-Task",
+  "name": "test_task",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "docker": "^1.0.0",
     "pinia": "^2.1.6",
     "url": "^0.11.3",
     "vue": "^3.3.4",
