--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "gh-pages": "^6.0.0",
     "sass": "^1.69.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
